# matcher

./: .gitmodules  CMakeLists.txt
matcher/: CMakeLists.txt
matcher/include/matcher/: matcher.h
matcher/src/: matcher.c
tests/: CMakeLists.txt
tests/include/: helpers.h
tests/src/: empty_pattern.c  escaped_characters.c  exact_match.c  legacy.cpp  negated.c  partials.c  wildcard.c
